# 998-cyx

./: .gitignore  Guide.md  environment.yml  inference.py  requirements.txt  run.py  zmq_service.py
coreDetector/: core_detector.py
frontend/: README.md  README_bk.md  app.css  app.js  index.html  server.py  ws_bridge.py
imageProcess/: README.md  (+2 more)
moduleC/: README.md  mock_module_c.py  pub_example_C.json  pyproject.toml
moduleC/coreDetector/: core_detector.py  traffic_sign_map.py
moduleC/coreDetector/.runtime_cache/mpl/: fontlist-v390.json
moduleC/coreDetector/.runtime_cache/ultralytics/: settings.yaml
moduleC/demo/: __init__.py
moduleC/demo/modulecd_bsd_demo/: README.md  __init__.py  config.toml  protocol.py  sample_publisher.py  sample_subscriber.py  service.py
moduleC/demo/modulecd_bsd_demo/scripts/: run_demo.sh
moduleC/demo/modulecd_bsd_demo/weights/: bsd_demo.json
moduleC/docs/: current_mainline.md
moduleC/src/: __init__.py
moduleC/src/alerting/: __init__.py  risk_manager.py
moduleC/src/detection/: __init__.py  multitask_detector.py
moduleC/src/prediction/: __init__.py  imm_predictor.py
moduleC/src/runtime/: __init__.py  modulecd_payload.py  pipeline.py  types.py
moduleC/src/tracking/: __init__.py  bytetrack_wrapper.py  ego_motion_compensator.py
moduleC/src/utils/: __init__.py  config.py  logging.py  runtime.py
moduleC/src/zones/: __init__.py  adaptive_zone.py  zone_model.py
moduleC/tests/: test_modulecd_bsd_demo_protocol.py  test_modulecd_bsd_demo_zmq.py
moduleC/training/: __init__.py  multitask_yolo.py  zone_seg_head.py
(+54 files in other folders)
